EL-317: WIP - fixed Guice group ID, classpath resolution, and SPI loader path.
Corrected Maven group ID from com.google.guice to com.google.inject across BuiltinSpi
and TestElementSpi. Disabled classpath resolution in shrinkwrap resolver. Fixed
DirectoryElementPathLoader to pass subpath (not root path) to the SPI loader, and to
ensure directory URLs end with a trailing slash.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>